validation, create monitor type endpoint